// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatChip > (Snapshot) renders with icon 1`] = `
<div>
  <div
    class="border-border bg-background shadow-shadow flex items-center gap-2 rounded-md border-(length:--border-width) px-2 py-1"
  >
    <span
      class="shrink-0"
    >
      <svg
        data-testid="test-icon"
      />
    </span>
    <span
      class="font-heading text-lg font-extrabold"
    >
      42
    </span>
    <span
      class="text-foreground-secondary text-xs font-bold tracking-wide uppercase"
    >
      Tracks
    </span>
  </div>
</div>
`;

exports[`StatChip > (Snapshot) renders with value and label 1`] = `
<div>
  <div
    class="border-border bg-background shadow-shadow flex items-center gap-2 rounded-md border-(length:--border-width) px-2 py-1"
  >
    <span
      class="font-heading text-lg font-extrabold"
    >
      1952
    </span>
    <span
      class="text-foreground-secondary text-xs font-bold tracking-wide uppercase"
    >
      Year
    </span>
  </div>
</div>
`;
